Bonus 2: Stampare un’unica lista che contiene attori e attrici insieme

--- a/src/index.css
+++ b/src/index.css
@@ -19,16 +19,9 @@
   margin: 0 auto;
 }
 
-.woman {
-  background-color: pink;
-}
-
-.man {
-  background-color: lightblue;
-}
-
 .card {
   width: calc((100% - 30px) / 2);
+  background-color: lightgray;
 
   span {
     display: block;
@@ -49,4 +42,12 @@
     }
   }
 
+}
+
+.woman {
+  background-color: pink;
+}
+
+.man {
+  background-color: lightblue;
 }
